--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.4
   firebase_auth: ^4.1.4
   settings_ui: ^2.0.2
+  cloud_firestore: ^4.2.0
 
 dev_dependencies:
   flutter_test:
