Project structure updated Goolge map connected to project Filter page UI designed finished added google map to InternDetailPage.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_auth: ^4.1.4
   settings_ui: ^2.0.2
   cloud_firestore: ^4.2.0
+  google_maps_flutter: ^2.2.2
+  awesome_dropdown: ^0.0.4
+
 
 dev_dependencies:
   flutter_test:
