Add models for intern and user then changed widgets construction before they takes DocumentSnap now they takes Intern instance .

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,5 +30,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyDwZcx6EF9oFowdRv_IOp-le4mPf1db0IM"/>
     </application>
 </manifest>
