--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   awesome_dropdown: ^0.0.4
   file_picker: ^5.2.4
   firebase_storage: ^11.0.10
+  firebase_messaging: ^14.2.1
+  firebase_analytics: ^10.1.0
+  http: ^0.13.5
+  flutter_local_notifications: ^13.0.0
 
 
 dev_dependencies:
