--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.3.0
-  provider: ^6.0.4
   firebase_auth: ^4.1.4
   settings_ui: ^2.0.2
   cloud_firestore: ^4.2.0
@@ -49,6 +48,8 @@ dependencies:
   firebase_analytics: ^10.1.0
   http: ^0.13.5
   flutter_local_notifications: ^13.0.0
+  geolocator: ^9.0.2
+  geocoding: ^2.0.5
 
 
 dev_dependencies:
